docs(README): 优化目录下的README文档
Co-authored-by: zhangxunx <>